💄(edulib) update theme to richie 1.14
update theme to richie 1.14 but maintain font icons

--- a/src/frontend/scss/_fonts.scss
+++ b/src/frontend/scss/_fonts.scss
@@ -1,35 +1,3 @@
-@font-face {
-  font-family: 'Exo 2';
-  src: url('../fonts/exo2-medium-webfont.woff2') format('woff2'),
-    url('../fonts/exo2-medium-webfont.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Exo 2';
-  src: url('../fonts/exo2-mediumitalic-webfont.woff2') format('woff2'),
-    url('../fonts/exo2-mediumitalic-webfont.woff') format('woff');
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: 'Exo 2';
-  src: url('../fonts/exo2-bold-webfont.woff2') format('woff2'),
-    url('../fonts/exo2-bold-webfont.woff') format('woff');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Exo 2';
-  src: url('../fonts/exo2-bolditalic-webfont.woff2') format('woff2'),
-    url('../fonts/exo2-bolditalic-webfont.woff') format('woff');
-  font-weight: 700;
-  font-style: italic;
-}
-
 * {
-  font-family: 'Exo 2', sans-serif;
+  font-family: sans-serif;
 }
