--- a/src/frontend/scss/templates/search/_search.scss
+++ b/src/frontend/scss/templates/search/_search.scss
@@ -21,7 +21,7 @@ $richie-template-search-padding: 0 !default;
     display: flex;
     flex-direction: column;
 
-    & > .fun-react--search {
+    & > .richie-react--search {
       flex-grow: 1;
       display: flex;
       flex-direction: column;
