--- a/src/frontend/js/components/Spinner/_styles.scss
+++ b/src/frontend/js/components/Spinner/_styles.scss
@@ -1,21 +1,29 @@
-.search-loader-container {
+.spinner-container {
   flex-grow: 1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.search-loader {
+.spinner {
   border: 0.125rem solid transparent;
   border-left-color: $dodgerblue5;
   border-top-color: $dodgerblue5;
   border-radius: 50%;
-  width: 3rem;
-  height: 3rem;
   animation: spin 0.8s linear infinite;
   display: inline-block;
   margin-left: 0.5rem;
   vertical-align: baseline;
+
+  &--small {
+    width: 1rem;
+    height: 1rem;
+  }
+
+  &--large {
+    width: 3rem;
+    height: 3rem;
+  }
 
   @keyframes spin {
     0% {
