--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -65,12 +65,14 @@
                     </ul>
                     {% language_chooser "menu/language_menu.html" %}
                     {% block userlogin %}
-                    <div
-                      class="richie-react richie-react--user-login"
-                      data-props='{"loginUrl": "{% url 'admin:index' %}",
-                      "logoutUrl": "{% url 'logout' %}",
-                      "signupUrl": "{% url 'admin:index' %}"}'
-                    ></div>
+                        <ul class="topbar__menu__list topbar__menu__list--aside">
+                            <li class="topbar__menu__list__item topbar__menu__list__item--cta-hollow">
+                                <a class="topbar__menu__list__item__link" href="https://cours.edulib.org/register?next=/dashboard">{% trans "Sign up" %}</a>
+                            </li>
+                            <li class="topbar__menu__list__item topbar__menu__list__item--cta">
+                                <a class="topbar__menu__list__item__link" href="https://cours.edulib.org/login?next=/dashboard">{% trans "Login" %}</a>
+                            </li>
+                        </ul>
                     {% endblock userlogin %}
                 </div>
             </nav>
