🍱(edulib) Fix missing favicon.ico
Make sure favicon can be found by adding link to base.html.

--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -43,6 +43,8 @@
         {% block css_links %}
         <link rel="stylesheet" type="text/css" href="{% static 'richie/css/main.css' %}">
         {% endblock css_links %}
+        <link rel="shortcut icon" href="{%  static "richie/images/favicon.ico" %}">
+        <link rel="icon" type="image/gif" href="{%  static "richie/images/favicon.ico" %}">
     </head>
     <body>
         {% cms_toolbar %}
