--- a/src/backend/funmooc/templates/courses/cms/course_run_detail.html
+++ b/src/backend/funmooc/templates/courses/cms/course_run_detail.html
@@ -34,7 +34,7 @@
     </h1>
 
     <div class="course-detail__content__row course-detail__content__categories">
-      {% with form_factor="tag" %}
+      {% with variant="tag" %}
         {% page_placeholder "course_categories" current_page.parent_page or %}
           <p class="course-detail__content__categories__placeholder">
             {% trans "No associated categories" %}
@@ -66,18 +66,14 @@
           <dt>{% trans "Languages" %}</dt>
           <dd>{% render_model course_run "get_languages_display" "languages" %}</dd>
         </dl>
-        {% if run.state.call_to_action == _("enroll now") %}
-          <a class="course-detail__content__run__block__cta" href="{{ course_run.resource_link }}">
-            {{ course_run.state.call_to_action|capfirst }}
-          </a>
-        {% elif run.state.call_to_action %}
-          <button class="course-detail__content__run__block__cta course-detail__content__run__block__cta--projected">
-            {{ course_run.state.text|capfirst }}
-          </button>
+        {% if course_run.state.call_to_action %}
+        <a class="course-detail__content__run__block__cta" href="{{ course_run.resource_link }}">
+          {{ course_run.state.call_to_action|capfirst }}
+        </a>
         {% else %}
-          <button class="course-detail__content__run__block__cta course-detail__content__run__block__cta--projected">
-            {{ course_run.state.text|capfirst }}
-          </button>
+        <button class="course-detail__content__run__block__cta course-detail__content__run__block__cta--projected">
+          {{ course_run.state.text|capfirst }}
+        </button>
         {% endif %}
       </div>
       {% if current_page.publisher_is_draft %}
