💄(edulib) update SCSS to richie 1.16.1
update SCSS to richie 1.16.1

--- a/src/frontend/scss/components/_footer.scss
+++ b/src/frontend/scss/components/_footer.scss
@@ -91,14 +91,19 @@ $richie-footer-poweredby-link-fontcolor: $white !default;
   }
 
   &__brand {
-    @include sv-flex(0, 0, auto);
     display: flex;
+    flex-wrap: wrap;
     padding: $richie-footer-brand-padding;
     order: 1;
 
     &__link {
       @include sv-flex(1, 0, auto);
       display: block;
+      margin-top: 0.5rem;
+
+      @include media-breakpoint-down(sm) {
+        flex-basis: 100%;
+      }
     }
 
     &__badge {
@@ -106,7 +111,7 @@ $richie-footer-poweredby-link-fontcolor: $white !default;
       display: block;
       margin-left: 1rem;
       font-size: 2.4rem;
-      color: $gray48;
+      color: $gray40;
 
       &:hover {
         color: $white;
