--- a/src/frontend/scss/_main.scss
+++ b/src/frontend/scss/_main.scss
@@ -78,6 +78,7 @@
 @import '../js/components/SearchFilterGroup/styles';
 @import '../js/components/SearchFilterGroupModal/styles';
 @import '../js/components/SearchFiltersPane/styles';
+@import '../js/components/SearchInput/styles';
 @import '../js/components/Spinner/styles';
 @import '../js/components/UserLogin/styles';
 
