--- a/src/frontend/scss/templates/core/social-networks/_social-networks.scss
+++ b/src/frontend/scss/templates/core/social-networks/_social-networks.scss
@@ -8,21 +8,30 @@
     @include sv-flex(1, 0, 2rem);
     display: flex;
     height: 2rem;
+    padding: 6px;
     flex-direction: column;
     justify-content: center;
     color: $white;
-    background: $edulib5;
+    background: $firebrick6;
     border-radius: 100%;
     text-align: center;
 
     &:hover {
-      color: $edulib5;
+      color: $firebrick6;
       background: $white;
       text-decoration: none;
     }
 
     & + #{$badges-selector}__item {
       margin-left: 1rem;
+    }
+
+    &__icon {
+      fill: white;
+
+      .social-network-badges__item:hover > & {
+        fill: $firebrick6;
+      }
     }
   }
 }
