💄(edulib) fix social network badge on course_detail template
Fix error on social-network badges causing problems with course pages

--- a/src/backend/funmooc/templates/courses/cms/course_detail.html
+++ b/src/backend/funmooc/templates/courses/cms/course_detail.html
@@ -196,6 +196,9 @@
               </div>
             {% endif %}
             {% endblock runs_archived %}
+          </div>
+        {% endwith %}
+      {% endblock runs %}
 
       {% block social_networks %}
         <div class="course-detail__aside__social-networks">
