--- a/src/frontend/scss/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/templates/courses/cms/_course_detail.scss
@@ -45,7 +45,7 @@ $richie-course-detail-synopsis-fontcolor: $white !default;
 
 $richie-course-detail-socialnetworks-background: $gray23 !default;
 $richie-course-detail-socialnetworks-margin: 0 !default;
-$richie-course-detail-socialnetworks-padding: 0 1rem 2rem !default;
+$richie-course-detail-socialnetworks-padding: 2rem 1rem 1rem !default;
 $richie-course-detail-socialnetworks-fontcolor: $white !default;
 
 $richie-course-detail-team-gutter: 0.5rem !default;
