💄(edulib) center text when course run list is empty
center text when course run list is empty

--- a/src/frontend/scss/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/templates/courses/cms/_course_detail.scss
@@ -422,6 +422,10 @@ $richie-course-detail-aside-main-org-background: $white !default;
           text-align: center;
         }
 
+        &__empty {
+          text-align: center;
+        }
+
         $block-selector: &;
 
         position: relative;
