--- a/sites/funmooc/src/frontend/scss/_main.scss
+++ b/sites/funmooc/src/frontend/scss/_main.scss
@@ -77,7 +77,7 @@
 @import 'richie-education/js/components/UserLogin/styles';
 @import 'richie-education/scss/components/templates/courses/plugins/category_plugin';
 @import 'richie-education/scss/components/templates/courses/plugins/licence_plugin';
-@import './components/templates/richie/section/section';
+@import 'richie-education/scss/components/templates/richie/section/section';
 @import './components/templates/richie/large_banner/large_banner';
 @import 'richie-education/scss/components/templates/richie/nesteditem/nesteditem';
 @import 'richie-education/scss/components/templates/richie/glimpse/glimpse';
