--- a/sites/funmooc/src/backend/templates/courses/cms/course_run_detail.html
+++ b/sites/funmooc/src/backend/templates/courses/cms/course_run_detail.html
@@ -27,8 +27,7 @@
     {% endblock breadcrumbs %}
 
     {% block subheader_content %}{% spaceless %}
-        {% comment %}{% with course=current_page.parent_page course_run=current_page.course header_level=2 %}{% endcomment %}
-        {% with course=current_page.course course_run=current_page.courserun header_level=2 %}
+        {% with course=current_page.parent_page.course course_run=current_page.courserun header_level=2 %}
         <div class="subheader__container">
             <div class="subheader__intro">
                 <div class="subheader__main">
@@ -60,11 +59,37 @@
                     </div>
 
                     <div class="subheader__content subheader__content--aside">
-                        {% if current_page.parent_page.publisher_is_draft or not current_page.parent_page|is_empty_placeholder:"course_description" %}
+                        {% if current_page.parent_page.publisher_is_draft or not current_page.parent_page|is_empty_placeholder:"course_introduction" %}
                             {% with header_level=3 %}
-                            {% show_placeholder "course_description" current_page.parent_page %}
+                                {% show_placeholder "course_introduction" current_page.parent_page %}
                             {% endwith %}
                         {% endif %}
+
+                        {% block synopsis %}
+                        {% if course.duration or course.effort %}
+                        <div class="characteristics">
+                            <ul class="characteristics__container">
+                                {% if course.duration %}
+                                <li class="characteristics__item">
+                                    <svg role="img" class="characteristics__icon" aria-hidden="true">
+                                        <use xlink:href="#icon-clock" />
+                                    </svg>
+                                    <span class="characteristics__term">{% trans "Duration:" %} {{ course.get_duration_display|default:"NA" }}</span>
+                                </li>
+                                {% endif %}
+                                {% if course.effort %}
+                                <li class="characteristics__item">
+                                    <svg role="img" class="characteristics__icon" aria-hidden="true">
+                                        <use xlink:href="#icon-stopwatch" />
+                                    </svg>
+                                    <span class="characteristics__term">{% trans "Effort:" %} {{ course.get_effort_display|default:"NA" }}</span>
+                                </li>
+                                {% endif %}
+                            </ul>
+                        </div>
+                        {% endif %}
+                        {% endblock synopsis %}
+
                     </div>
                 </div>
 
@@ -130,6 +155,15 @@
                 {% block skills %}
                 {% endblock skills %}
 
+                {% block description %}
+                    {% if not current_page.parent_page|is_empty_placeholder:"course_description" %}
+                        <div class="course-detail__row course-detail__description">
+                            <h2 class="course-detail__title">{% blocktrans context "course_detail__title" %}Description{% endblocktrans %}</h2>
+                            {% show_placeholder "course_description" current_page.parent_page %}
+                        </div>
+                    {% endif %}
+                {% endblock description %}
+
                 {% block format %}
                 {% endblock format %}
 
@@ -168,7 +202,7 @@
             <div class="course-detail__team course-detail__block course-detail__block--lightest">
                 <section class="section course-detail__row course-detail__team">
                     <h2 class="course-detail__title">
-                        {% trans 'Course team' %}
+                        {% blocktrans context "course_detail__title" %}Course team{% endblocktrans %}
                     </h2>
                     {% with header_level=3 %}
                         <div class="section__items section__items--team">
@@ -185,7 +219,7 @@
             <div class="course-detail__organizations course-detail__block">
                 <section class="section course-detail__row course-detail__organizations">
                     <h2 class="course-detail__title">
-                        {% trans 'Organizations' %}
+                        {% blocktrans context "course_detail__title" %}Organizations{% endblocktrans %}
                     </h2>
                     <div class="section__items section__items--organizations">
                         {% show_placeholder "course_organizations" current_page.parent_page %}
