--- a/sites/funmooc/src/backend/templates/courses/cms/fragment_course_run.html
+++ b/sites/funmooc/src/backend/templates/courses/cms/fragment_course_run.html
@@ -12,6 +12,15 @@
         <dt>{% trans "Languages" %}</dt>
         <dd>{% render_model run "get_languages_display" "languages" %}</dd>
     </dl>
+    {% if current_page.publisher_is_draft %}
+        <a href="{{ run.extended_object.get_absolute_url }}">
+            {% if run.start  %}
+                {% blocktrans with title=run.extended_object.get_title|capfirst start=run.start|date:'DATE_FORMAT'|default:'...' end=run.end|date:'DATE_FORMAT'|default:'...' %}{{ title }}, from {{ start }} to {{ end }}{% endblocktrans %}
+            {% else %}
+                {{ run.extended_object.get_title|capfirst }}
+            {% endif %}
+        </a>
+    {% endif %}
     <a href="{{ run.resource_link }}" class="course-detail__run-cta">
         {{ run.state.call_to_action|capfirst }}
     </a>
