✨(edulib) Update translations and add language selector dropdown

--- a/sites/funmooc/src/backend/templates/richie/base.html
+++ b/sites/funmooc/src/backend/templates/richie/base.html
@@ -96,6 +96,7 @@
                             {% block topbar_contact %}
                             {% endblock topbar_contact %}
                         </ul>
+                        {% language_chooser "menu/language_menu.html" %}
                     </div>
                 </div>
             </nav>
