💄(course) replace course-detail__run-cta
replace course-detail__run-cta in fragment_course_run template by
course-run-enrollment__cta

--- a/sites/funmooc/src/backend/templates/courses/cms/fragment_course_run.html
+++ b/sites/funmooc/src/backend/templates/courses/cms/fragment_course_run.html
@@ -21,7 +21,7 @@
             {% endif %}
         </a>
     {% endif %}
-    <a href="{{ run.resource_link }}" class="course-detail__run-cta">
+    <a href="{{ run.resource_link }}" class="course-run-enrollment__cta">
         {{ run.state.call_to_action|capfirst }}
     </a>
 </div>
