--- a/sites/funmooc/src/frontend/scss/_main.scss
+++ b/sites/funmooc/src/frontend/scss/_main.scss
@@ -84,7 +84,7 @@
 @import 'richie-education/scss/components/templates/richie/glimpse/glimpse';
 
 // Page component styles
-@import 'richie-education/scss/components/header';
+@import './components/header';
 @import './components/subheader';
 @import 'richie-education/scss/components/footer';
 @import 'richie-education/scss/components/styleguide';
