--- a/sites/funmooc/src/frontend/scss/components/_header.scss
+++ b/sites/funmooc/src/frontend/scss/components/_header.scss
@@ -364,4 +364,15 @@
       display: flex;
     }
   }
+
+  .richie-react--language-selector {
+    display: flex;
+    align-items: center;
+    margin-left: 0;
+    color: r-theme-val(topbar, item-color);
+
+    &__button__icon {
+      fill: r-theme-val(topbar, item-color);
+    }
+  }
 }
