--- a/sites/funmooc/src/backend/templates/richie/base.html
+++ b/sites/funmooc/src/backend/templates/richie/base.html
@@ -96,6 +96,7 @@
                             {% block topbar_contact %}
                             {% endblock topbar_contact %}
                         </ul>
+
                         {% language_chooser "menu/language_menu.html" %}
                     </div>
                 </div>
@@ -119,7 +120,9 @@
             <div class="body-footer">
                 <div class="body-footer__container">
                     <div class="body-footer__menu">
-                        {% static_placeholder "footer" %}
+                        <div class="body-footer__items">
+                            {% static_placeholder "footer" %}
+                        </div>
                     </div>
                     <div class="body-footer__brand">
                         <a href="/">
@@ -137,17 +140,19 @@
             </div>
             <div class="body-mentions">
                 <div class="body-mentions__container">
-                    <div class="body-mentions__copyright">
-                        <p>{% now "Y" %} &copy; EDUlib {% trans "All Rights Reserved." %}</p>
-                    </div>
-                    <div class="body-mentions__poweredby">
-                        <p>
-                            <small>{% trans "Powered by" %}</small>
-                            <a class="body-footer__poweredby__link" href="https://github.com/openfun/richie"><strong>Richie</strong></a>
-                            &
-                            <a class="body-footer__poweredby__link" href="https://open.edx.org/"><strong>open edX</strong></a>
-                        </p>
-                    </div>
+                    {% block body_mentions %}
+                        <div class="body-mentions__copyright">
+                            <p>{% now "Y" %} &copy; EDUlib {% trans "All Rights Reserved." %}</p>
+                        </div>
+                        <div class="body-mentions__poweredby">
+                            <p>
+                                <small>{% trans "Powered by" %}</small>
+                                <a class="body-footer__poweredby__link" href="https://github.com/openfun/richie"><strong>Richie</strong></a>
+                                &
+                                <a class="body-footer__poweredby__link" href="https://open.edx.org/"><strong>open edX</strong></a>
+                            </p>
+                        </div>
+                    {% endblock body_mentions %}
                 </div>
             </div>
             {% endblock body_footer %}
@@ -159,41 +164,59 @@
         </script>
         <script src="{% static 'richie/js/index.js' %}"></script>
         <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Get all topbar burger elements
-            const topbarBurgers = Array.prototype.slice.call(
-                document.querySelectorAll(".topbar__hamburger"), 0
-            );
+            function initializeHamburgerMenu() {
+                // Get all topbar burger elements
+                const topbarBurgers = Array.prototype.slice.call(
+                    document.querySelectorAll(".topbar__hamburger"), 0
+                );
 
-            // Check if there are any navbar burgers
-            if (topbarBurgers.length > 0) {
-                // Add a click event on each of them
-                topbarBurgers.forEach(function(el) {
-                    el.addEventListener("click", function() {
-                        // Get the target from the "data-target" attribute
-                        const target = document.getElementById(el.dataset.target);
-                        // Toggle the "is-active" class on both the burger and container
-                        el.classList.toggle("is-active");
-                        target.classList.toggle("is-open");
+                // Check if there are any navbar burgers
+                if (topbarBurgers.length > 0) {
+                    // Add a click event on each of them
+                    topbarBurgers.forEach(function(el) {
+                        el.addEventListener("click", function() {
+                            // Get the target from the "data-target" attribute
+                            const target = document.getElementById(el.dataset.target);
+                            // Toggle the "is-active" class on both the burger and container
+                            el.classList.toggle("is-active");
+                            target.classList.toggle("is-open");
+                        });
                     });
-                });
+                }
             }
 
-            // Implement accordion item behaviors
-            const $accordionItems = Array.prototype.slice.call(
-                document.querySelectorAll('[data-accordion-button]'), 0
-            );
+            function initializeAccordions() {
+                // Implement accordion item behaviors
+                const $accordionItems = Array.prototype.slice.call(
+                    document.querySelectorAll('[data-accordion-button]'), 0
+                );
 
-            if ($accordionItems.length > 0) {
-                $accordionItems.forEach(function(itemObject, itemIndex) {
-                    itemObject.addEventListener('click', () => {
-                        itemObject.closest('li').toggleAttribute('data-accordion-active');
-                        itemObject.toggleAttribute('data-accordion-open');
+                if ($accordionItems.length > 0) {
+                    $accordionItems.forEach(function(itemObject, itemIndex) {
+                        itemObject.addEventListener('click', function () {
+                            itemObject.closest('li').toggleAttribute('data-accordion-active');
+                            itemObject.toggleAttribute('data-accordion-open');
+                        });
                     });
-                });
+                }
             }
-        });
+
+            document.addEventListener("DOMContentLoaded", function() {
+                initializeAccordions();
+                initializeHamburgerMenu();
+            });
         </script>
+        {% if request.toolbar and request.toolbar.edit_mode_active %}
+        {# When edit mode is active, we have to refresh js scripts after saving modifications #}
+        {# https://docs.django-cms.org/en/latest/topics/frontend-integration.html #}
+        <script>
+            CMS.$(window).on('cms-content-refresh', function () {
+                __RICHIE__.render();
+                initializeAccordions();
+                initializeHamburgerMenu();
+            });
+        </script>
+        {% endif %}
         {% block body_js %}{% endblock body_js %}
     </body>
 </html>
