--- a/sites/funmooc/src/backend/templates/social-networks/blogpost-badges.html
+++ b/sites/funmooc/src/backend/templates/social-networks/blogpost-badges.html
@@ -24,6 +24,16 @@
             </svg>
         </a>
         <a
+            href="https://www.linkedin.com/sharing/share-offsite/?url={{ full_page_url }}"
+            class="social-network-badges__item"
+            target="_blank"
+            title="{% trans "Share on Linkedin" %}"
+        >
+            <svg role="img">
+                <use xlink:href="#icon-linkedin" />
+            </svg>
+        </a>
+        <a
             href="mailto:?subject={{ mailto_subject|urlencode }}&amp;body={{ full_page_url|urlencode }}"
             class="social-network-badges__item"
             target="_blank"
