--- a/sites/funmooc/src/frontend/scss/settings/_colors.scss
+++ b/sites/funmooc/src/frontend/scss/settings/_colors.scss
@@ -16,7 +16,6 @@ $palette: (
   'smoke': #fdfdfd,
   'white': #ffffff,
   'denim': #0067b7,
-  'ocean-blue': #0067b7,
   'firebrick6': #0483bb,
   'purplish-grey': #726c74,
   'grey32': #525151,
@@ -35,16 +34,8 @@ $neutral-gradient: linear-gradient(
   r-color('white') 14rem,
   r-color('white')
 );
-$middle-gradient: linear-gradient(
-  285deg,
-  r-color('grey59') 3%,
-  r-color('grey87') 98%
-);
-$dark-gradient: linear-gradient(
-  285deg,
-  r-color('grey32') 3%,
-  r-color('grey59') 98%
-);
+$middle-gradient: linear-gradient(285deg, r-color('grey59') 3%, r-color('grey87') 98%);
+$dark-gradient: linear-gradient(285deg, r-color('grey32') 3%, r-color('grey59') 98%);
 $white-mask-gradient: (
   linear-gradient(
     to right,
@@ -189,19 +180,11 @@ $white-mask-gradient-scheme: (
   background: $white-mask-gradient,
   hover-font-color: r-color('firebrick6'),
 );
-$clear-red-scheme: (
-  font-color: r-color('lipstick'),
-  h1-color: r-color('lipstick'),
-  h2-color: r-color('lipstick'),
-  svg-color: r-color('lipstick'),
-  background: r-color('white'),
-  hover-font-color: r-color('lipstick'),
-);
 
 // Theme schemes
 $r-theme: (
   // Used from styleguide to build available scheme to demonstrate, used to create button variant
-    base-schemes:
+  base-schemes:
     (
       primary: $firebrick6-scheme,
       secondary: $indianred3-scheme,
@@ -308,8 +291,7 @@ $r-theme: (
     base-shadow: r-color('black'),
   ),
   hero-intro: (
-    insert-background-image:
-      url('../../richie/images/components/wave-white.svg'),
+    insert-background-image: url('../../richie/images/components/wave-white.svg'),
     inner-background: $white-mask-gradient,
     title-color: r-color('firebrick6'),
     title-alt-color: r-color('charcoal'),
@@ -323,7 +305,7 @@ $r-theme: (
     cta-border: r-color('white'),
   ),
   section-plugin: (
-    title-emphased-color: r-color('lipstick'),
+    title-emphased-color: r-color('firebrick6'),
   ),
   licence-plugin: (
     content-color: r-color('slate-grey'),
@@ -501,8 +483,7 @@ $r-theme: (
   ),
   category-detail: (
     empty-background: r-color('smoke'),
-    insert-background-image:
-      url('../../richie/images/components/wave-white.svg'),
+    insert-background-image: url('../../richie/images/components/wave-white.svg'),
     logo-background: r-color('white'),
     logo-border: r-color('light-grey'),
     logo-shadow: 0 0.25rem 1.5625rem r-color('slate-grey'),
@@ -519,13 +500,11 @@ $r-theme: (
     run-descriptions-divider: r-color('light-grey'),
     plan-title-color: r-color('firebrick6'),
     license-label-color: r-color('denim'),
-    checkmark-list-decoration:
-      url('../../richie/images/components/checkmark.svg'),
+    checkmark-list-decoration: url('../../richie/images/components/checkmark.svg'),
   ),
   organization-detail: (
     banner-empty-background: r-color('smoke'),
-    insert-background-image:
-      url('../../richie/images/components/wave-white.svg'),
+    insert-background-image: url('../../richie/images/components/wave-white.svg'),
     logo-border: r-color('light-grey'),
     logo-shadow: 0 0.25rem 1.5625rem r-color('slate-grey'),
     intro-title: r-color('firebrick6'),
@@ -588,11 +567,11 @@ $r-theme: (
   selector: (
     base-background: r-color('white'),
     hover-background: r-color('white'),
-    base-color: r-color('dark'),
-    hover-color: r-color('dark'),
+    base-color: r-color('charcoal'),
+    hover-color: r-color('charcoal'),
     base-border: r-color('light-grey'),
   ),
   spinner: (
-    base-color: r-color('ocean-blue'),
+    base-color: r-color('denim'),
   )
 );
