💄(edulib) update colour customization after update to 2.21

--- a/sites/funmooc/src/frontend/scss/settings/_colors.scss
+++ b/sites/funmooc/src/frontend/scss/settings/_colors.scss
@@ -339,8 +339,8 @@ $r-theme: (
   ),
   badge-glimpse: (
     base-background: r-color('white'),
-    title-color: r-color('black'),
-    content-color: r-color('brownish-grey'),
+    title-color: r-color('charcoal'),
+    content-color: r-color('slate-grey'),
   ),
   card-glimpse: (
     base-background: r-color('white'),
